--- a/src/styles/SCSS/_settings.scss
+++ b/src/styles/SCSS/_settings.scss
@@ -16,11 +16,12 @@
 		cursor: pointer;
 		background-color: #ffffff00;
 		transition: background-color 0.2s;
+		padding: unset;
 
 		@include allCentered();
 
 		img {
-			width: 85%;
+			width: 65%;
 			filter: drop-shadow(0px 1px 15px #0008);
 			transition: transform 0.6s $easeOutThree;
 			will-change: transform;
