--- a/src/styles/SCSS/style.scss
+++ b/src/styles/SCSS/style.scss
@@ -5,6 +5,7 @@
 #interface {
 	position: relative;
 	min-height: 100vh;
+	min-height: var(--app-height);
 	min-width: 350px;
 	display: flex;
 	flex-direction: column;
